--- a/clib/dune
+++ b/clib/dune
@@ -3,6 +3,7 @@
  (synopsis "Coq's Utility Library [general purpose]")
  (public_name coq-core.clib)
  (wrapped false)
+ (instrumentation (backend bisect_ppx))
  (modules_without_implementation cSig)
  (modules :standard \ unicodetable_gen)
  (libraries str unix threads))
