--- a/kernel/dune
+++ b/kernel/dune
@@ -5,6 +5,7 @@
  (wrapped false)
  (modules_without_implementation values declarations entries)
  (modules (:standard \ genOpcodeFiles uint63_31 uint63_63 float64_31 float64_63))
+ (instrumentation (backend bisect_ppx))
  (libraries boot lib coqrun dynlink))
 
 (executable
