--- a/lib/dune
+++ b/lib/dune
@@ -3,6 +3,7 @@
  (synopsis "Coq's Utility Library [coq-specific]")
  (public_name coq-core.lib)
  (wrapped false)
+ (instrumentation (backend bisect_ppx))
  (modules_without_implementation xml_datatype)
  (libraries
   coq-core.boot coq-core.clib coq-core.config
