--- a/parsing/dune
+++ b/parsing/dune
@@ -3,6 +3,7 @@
  (public_name coq-core.parsing)
  (wrapped false)
  (modules_without_implementation notation_gram)
+ (instrumentation (backend bisect_ppx))
  (libraries coq-core.gramlib interp))
 
 (coq.pp (modules g_prim g_constr))
