--- a/engine/dune
+++ b/engine/dune
@@ -5,4 +5,5 @@
  (wrapped false)
  ; until ocaml/dune#4892 fixed
  ; (private_modules univSubst)
+ (instrumentation (backend bisect_ppx))
  (libraries library))
