--- a/stm/dune
+++ b/stm/dune
@@ -5,4 +5,5 @@
  (wrapped false)
  ; until ocaml/dune#4892 fixed
  ; (private_modules dag proofBlockDelimiter tQueue vcs workerPool)
+ (instrumentation (backend bisect_ppx))
  (libraries sysinit coqworkmgrlib))
