--- a/topbin/dune
+++ b/topbin/dune
@@ -3,6 +3,7 @@
  (public_name coqtop)
  (package coq-core)
  (modules coqtop_bin)
+ (instrumentation (backend bisect_ppx))
  (libraries coq-core.toplevel))
 
 (executable
@@ -18,6 +19,7 @@
  (public_name coqc)
  (package coq-core)
  (modules coqc_bin)
+ (instrumentation (backend bisect_ppx))
  (libraries coq-core.toplevel))
  ; Adding -ccopt -flto to links options could be interesting, however,
  ; it doesn't work on Windows
