--- a/vernac/dune
+++ b/vernac/dune
@@ -6,6 +6,7 @@
  (modules_without_implementation vernacexpr)
  ; until ocaml/dune#4892 fixed
  ; (private_modules comProgramFixpoint egramcoq)
+ (instrumentation (backend bisect_ppx))
  (libraries tactics parsing findlib.dynload))
 
 (coq.pp (modules g_proofs g_vernac g_redexpr))
