--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,7 +40,7 @@ variables:
   # echo $(md5sum dev/ci/docker/old_ubuntu_lts/Dockerfile | head -c 10)
   # echo $(md5sum dev/ci/docker/edge_ubuntu/Dockerfile | head -c 10)
   BASE_CACHEKEY: "old_ubuntu_lts-V2024-01-08-011994e15c"
-  EDGE_CACHEKEY: "edge_ubuntu-V2024-06-26-c5d508ba41"
+  EDGE_CACHEKEY: "edge_ubuntu-V2024-06-26-9744d2418e"
   BASE_IMAGE: "$CI_REGISTRY_IMAGE:$BASE_CACHEKEY"
   EDGE_IMAGE: "$CI_REGISTRY_IMAGE:$EDGE_CACHEKEY"
 
@@ -305,7 +305,7 @@ build:edge+flambda:
   image: $EDGE_IMAGE
   variables:
     OPAM_VARIANT: "+flambda"
-    COQ_EXTRA_CONF: "-native-compiler yes"
+    COQ_EXTRA_CONF: "-native-compiler no"
   only: *full-ci
 
 build:base:dev:
@@ -527,13 +527,15 @@ test-suite:base:dev:
   script:
     - opam switch create $OCAMLVER --empty
     - eval $(opam env)
-    - opam repo add ocaml-beta https://github.com/ocaml/ocaml-beta-repository.git
     - opam update
     - opam install ocaml-variants=$OCAMLVER
-    - opam install dune zarith
+    - opam install dune zarith ocamlfind ounit2
     - eval $(opam env)
+    - make dunestrap
+    - dune build -p coq-core,coq-stdlib,coqide-server,coq
     - export COQ_UNIT_TEST=noop
     - make test-suite
+  image: $EDGE_IMAGE
   artifacts:
     name: "$CI_JOB_NAME.logs"
     when: always
