--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -522,13 +522,16 @@ test-suite:base:dev:
   script:
     - opam switch create $OCAMLVER --empty
     - eval $(opam env)
-    - opam repo add ocaml-beta https://github.com/ocaml/ocaml-beta-repository.git
     - opam update
     - opam install ocaml-variants=$OCAMLVER
-    - opam install dune zarith
+    - opam install dune zarith ocamlfind ounit2
     - eval $(opam env)
-    - export COQ_UNIT_TEST=noop
-    - make test-suite
+    # - export COQ_UNIT_TEST=noop
+    # - make test-suite
+    - make dunestrap
+    - dune build -p coq-core,coq-stdlib,coqide-server,coq
+    - make -j "$NJOBS" -C test-suite
+  image: $EDGE_IMAGE
   artifacts:
     name: "$CI_JOB_NAME.logs"
     when: always
@@ -537,6 +540,11 @@ test-suite:base:dev:
       - _build/default/test-suite/logs
     expire_in: 2 week
   allow_failure: true
+
+test-suite:5.2.0+trunk+dune:
+  extends: .test-suite:ocaml+beta+dune-template
+  variables:
+    OCAMLVER: 5.2.0+trunk
 
 test-suite:base+async:
   extends: .test-suite-template
