[compiler] Simple compiler using vernac API
This is a simple compiler for testing the vernacular layer and other
experiments. We replace coqc for easier testing.

It also supports some stats if desired, and doesn't depend on the STM.

Co-authored-by: Gaëtan Gilbert <gaetan.gilbert@skyskimmer.net>

--- a/topbin/dune
+++ b/topbin/dune
@@ -15,7 +15,7 @@
 
 (executable
  (name coqc_bin)
- (public_name coqc)
+ (public_name coqc_stm)
  (package coq-core)
  (modules coqc_bin)
  (libraries coq-core.toplevel))
