--- a/coq-core.opam
+++ b/coq-core.opam
@@ -31,6 +31,7 @@ depends: [
   "ocaml" {>= "4.09.0"}
   "ocamlfind" {>= "1.8.1"}
   "zarith" {>= "1.11"}
+  "memprof-limits" {= "0.2.0"}
   "ounit2" {with-test}
   "odoc" {with-doc}
 ]
