--- a/ide/coqide/dune
+++ b/ide/coqide/dune
@@ -92,7 +92,7 @@
 (install
  (section doc)
  (package coqide)
- (files FAQ))
+ (files FAQ.md))
 
 ; FIXME: we should install those in share/coqide. We better do this
 ; once the make-based system has been phased out.
