Global instruction counter library (Linux only).
This is implemented in C using the [linux/perf_event.h] interface
(see [man 2 perf_event_open]), made available to OCaml via simple
bindings in the new [perf] folder.

The instruction counter is exposed to the Coq source code via the
[lib/instr.mli] interface, which is implemented for non-supported
platforms using exception-raising functions.

--- a/lib/dune
+++ b/lib/dune
@@ -4,4 +4,6 @@
  (public_name coq-core.lib)
  (wrapped false)
  (modules_without_implementation xml_datatype)
- (libraries coq-core.boot coq-core.clib coq-core.config))
+ (libraries
+  coq-core.boot coq-core.clib coq-core.config
+  (select instr.ml from (!perf -> instr.noperf.ml) (perf -> instr.perf.ml))))
