--- a/doc/stdlib/index-list.html.template
+++ b/doc/stdlib/index-list.html.template
@@ -246,10 +246,10 @@ through the <tt>Require Import</tt> command.</p>
     </dt>
     <dd>
     theories/Numbers/Zmod.v
-    (theories/Numbers/Zmod.v)
     (theories/Numbers/Zmod/Base.v)
     (theories/Numbers/Zmod/FastPow2.v)
     (theories/Numbers/Zmod/Inverse.v)
+    (theories/Numbers/Zmod/LittleEndian.v)
     (theories/Numbers/Zmod/Mask.v)
     (theories/Numbers/Zmod/NonuniformDependent.v)
     (theories/Numbers/Zmod/TODO_MOVE.v)
