Expose [Evarconv.unify] as an Ltac2 primitive.
This adds two new modules to the Ltac2 standard library:
- [Ltac2.Unification] containing the unification primitives.
- [Ltac2.TransparentState] exposing the notion of transparency state.

--- a/doc/stdlib/index-list.html.template
+++ b/doc/stdlib/index-list.html.template
@@ -697,7 +697,9 @@ through the <tt>Require Import</tt> command.</p>
     user-contrib/Ltac2/Proj.v
     user-contrib/Ltac2/Std.v
     user-contrib/Ltac2/String.v
+    user-contrib/Ltac2/TransparentState.v
     user-contrib/Ltac2/Uint63.v
+    user-contrib/Ltac2/Unification.v
   </dd>
 
   <dt> <b>Unicode</b>:
