--- a/test-suite/Makefile
+++ b/test-suite/Makefile
@@ -75,9 +75,11 @@ endif
 
 COQEXTRAFLAGS?=
 COQFLAGS?=$(COQEXTRAFLAGS)
+COQCHKEXTRAFLAGS?=
+COQCHKFLAGS?=-bytecode-compiler yes $(COQCHKEXTRAFLAGS)
 
 coqc := $(BIN)coqc -q -R prerequisite TestSuite $(COQFLAGS)
-coqchk := $(BIN)coqchk -R prerequisite TestSuite
+coqchk := $(BIN)coqchk -R prerequisite TestSuite $(COQCHKFLAGS)
 coqdoc := $(BIN)coqdoc
 coqtop := $(BIN)coqtop -q -test-mode -R prerequisite TestSuite
 coqtopbyte := $(BIN)coqtop.byte -q
