Revert "test-suite: coqchk: Pass `-bytecode-compiler yes`"
This reverts commit 2d8fc4e2bbc2db695aad92880ee83332ac53b691.

We'll instead pass the flag per-file.

--- a/test-suite/Makefile
+++ b/test-suite/Makefile
@@ -75,11 +75,9 @@ endif
 
 COQEXTRAFLAGS?=
 COQFLAGS?=$(COQEXTRAFLAGS)
-COQCHKEXTRAFLAGS?=
-COQCHKFLAGS?=-bytecode-compiler yes $(COQCHKEXTRAFLAGS)
 
 coqc := $(BIN)coqc -q -R prerequisite TestSuite $(COQFLAGS)
-coqchk := $(BIN)coqchk -R prerequisite TestSuite $(COQCHKFLAGS)
+coqchk := $(BIN)coqchk -R prerequisite TestSuite
 coqdoc := $(BIN)coqdoc
 coqtop := $(BIN)coqtop -q -test-mode -R prerequisite TestSuite
 coqtopbyte := $(BIN)coqtop.byte -q
