--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -647,7 +647,9 @@ library:ci-fcsl_pcm:
   - library:ci-mathcomp_1
 
 library:ci-fiat_crypto:
-  extends: .ci-template-flambda
+  extends:
+    - .ci-template-flambda
+    - .large-tags
   variables:
     COQEXTRAFLAGS: "-async-proofs-tac-j 0"
   needs:
