Add new Ltac2 modules to doc index.

--- a/doc/stdlib/index-list.html.template
+++ b/doc/stdlib/index-list.html.template
@@ -681,6 +681,7 @@ through the <tt>Require Import</tt> command.</p>
     user-contrib/Ltac2/Ind.v
     user-contrib/Ltac2/Init.v
     user-contrib/Ltac2/Int.v
+    user-contrib/Ltac2/Lazy.v
     user-contrib/Ltac2/List.v
     user-contrib/Ltac2/Ltac1.v
     user-contrib/Ltac2/Message.v
@@ -690,6 +691,8 @@ through the <tt>Require Import</tt> command.</p>
     user-contrib/Ltac2/Pattern.v
     user-contrib/Ltac2/Printf.v
     user-contrib/Ltac2/Proj.v
+    user-contrib/Ltac2/RedFlags.v
+    user-contrib/Ltac2/Ref.v
     user-contrib/Ltac2/Std.v
     user-contrib/Ltac2/String.v
     user-contrib/Ltac2/TransparentState.v
