Use LRU cache to share lazy `to_constr` calls

--- a/kernel/dune
+++ b/kernel/dune
@@ -5,7 +5,7 @@
  (wrapped false)
  (modules_without_implementation values declarations entries)
  (modules (:standard \ genOpcodeFiles uint63_31 uint63_63 float64_31 float64_63))
- (libraries boot lib coqrun dynlink))
+ (libraries boot lib coqrun dynlink lru))
 
 (executable
   (name genOpcodeFiles)
