--- a/dev/ci/docker/edge_ubuntu/Dockerfile
+++ b/dev/ci/docker/edge_ubuntu/Dockerfile
@@ -36,11 +36,14 @@ ENV NJOBS="2" \
     OPAMYES="true"
 
 # Edge opam is the set of edge packages required by Coq
+#
+# Note: no ppxlib on 5.2.0+trunk , also odoc is broken, thus we need
+# to remove dune-release
 ENV COMPILER="5.2.0+trunk" \
     BASE_OPAM="zarith.1.13 ounit2.2.2.6" \
     CI_OPAM="ocamlgraph.2.0.0 cppo.1.6.9" \
-    BASE_OPAM_EDGE="dune.3.12.1 dune-build-info.3.12.1 dune-release.2.0.0 ocamlfind.1.9.6 odoc.2.3.1" \
-    CI_OPAM_EDGE="elpi.1.18.1 ppx_import.1.10.0 cmdliner.1.1.1 sexplib.v0.15.1 ppx_sexp_conv.v0.15.1 ppx_hash.v0.15.0 ppx_compare.v0.15.0 ppx_deriving_yojson.3.7.0 yojson.2.1.0 uri.4.2.0 ppx_yojson_conv.v0.15.1 ppx_inline_test.v0.15.1 ppx_assert.v0.15.0 lsp.1.16.2" \
+    BASE_OPAM_EDGE="dune.3.12.1 dune-build-info.3.12.1 ocamlfind.1.9.6" \
+    CI_OPAM_EDGE="" \
     COQIDE_OPAM_EDGE="lablgtk3-sourceview3.3.1.3"
 
 # EDGE+flambda switch, we install CI_OPAM as to be able to use
