added well-founded list extension `list_ext` of a well-founded relation as mechanization of the multiset order (up to transitive closure and permutation) added lemmas list_ext_inv, list_ext_nil_r, list_ext_Acc_app, Acc_list_ext, wf_list_ext, clos_trans_list_ext_nil_l, list_ext_app_l, list_ext_app_r, clos_refl_trans_list_ext_app_l, clos_refl_trans_list_ext_app_r, clos_trans_list_ext_app_l, clos_trans_list_ext_app_r added lemma wf_simulation for well-foundedness proofs added lemma clos_t_clos_rt showing inclusion of transitive closure in reflexive, transitive closure simplified well-foundedness proof of lexicographic exponentiation by using list extension and wf_simulation added changelog

--- a/doc/stdlib/index-list.html.template
+++ b/doc/stdlib/index-list.html.template
@@ -449,6 +449,7 @@ through the <tt>Require Import</tt> command.</p>
     theories/Wellfounded/Inverse_Image.v
     theories/Wellfounded/Lexicographic_Exponentiation.v
     theories/Wellfounded/Lexicographic_Product.v
+    theories/Wellfounded/List_Extension.v
     theories/Wellfounded/Transitive_Closure.v
     theories/Wellfounded/Union.v
     theories/Wellfounded/Wellfounded.v
