CI: enable TIMED for macos test-suite

--- a/.github/workflows/ci-macos.yml
+++ b/.github/workflows/ci-macos.yml
@@ -56,6 +56,6 @@ jobs:
           export OCAMLPATH="$(pwd)/../_install_ci/lib":"$OCAMLPATH"
           BIN="$(pwd)/../_install_ci/bin/"
           LIB="$(pwd)/../_install_ci/lib/coq/"
-          make -j "$NJOBS" BIN="$BIN" COQLIB="$LIB" PRINT_LOGS=1 all
+          make -j "$NJOBS" BIN="$BIN" COQLIB="$LIB" PRINT_LOGS=1 TIMED=1 all
         env:
           NJOBS: "2"
