Revert "Merge PR #18105: Rename `perf/perf.c` into `perf/coq_perf.c`"
This reverts commit 0f67689fa4e83197b5aa6f4fb7bb0e909fade1e0.

--- a/perf/dune
+++ b/perf/dune
@@ -3,5 +3,5 @@
  (synopsis "Instruction count using Linux perf.")
  (public_name coq-core.perf)
  (wrapped false)
- (foreign_stubs (language c) (names coq_perf))
+ (foreign_stubs (language c) (names perf))
  (enabled_if (= %{system} linux)))
