Experiment: bump timeout on test-suite:base+async
On top of https://github.com/coq/coq/pull/18213

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -545,6 +545,7 @@ test-suite:base+async:
   variables:
     COQEXTRAFLAGS: "-async-proofs on -async-proofs-cache force"
   allow_failure: true
+  timeout: 2h
   only:
     variables:
       - $UNRELIABLE =~ /enabled/ && $FULL_CI == "true"
